--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^6.0.4",
     "jquery": "^3.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-slick": "^1.1.15",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
